--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -22,7 +22,7 @@ body {
   }
 }
 
-main[role="main"] {
+[role="main"] {
   flex: 1;
 }
 
